--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
             </ul>
         </nav>
     </header>
-    <div class="heroimg" alt="image of meeting with four participants"></div>
-    <main class="content">
-        <section class="search-engine-optimization">
+    <div id="heroimg" alt="image of meeting with four participants gathered around a"></div>
+    <main class="main">
+        <section class="content">
             <img src="./assets/images/search-engine-optimization.jpg" alt="image of items on a table, including a laptop, notebook, pens, and a coffee" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
         </section>
-        <section class="online-reputation-management">
+        <section class="content">
             <img src="./assets/images/online-reputation-management.jpg" alt="image of user on both laptop and cellphone" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.</p>
         </section>
-        <section class="social-media-marketing">
+        <section class="content">
             <img src="./assets/images/social-media-marketing.jpg" alt="image of various social media reactions on a table"  class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.</p>
