--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </ul>
         </nav>
     </header>
-    <div id="heroimg" alt="image of meeting with four participants gathered around a"></div>
+    <div id="heroimg" alt="image of meeting with four participants gathered around a table"></div>
     <main class="main">
         <section class="content">
             <img src="./assets/images/search-engine-optimization.jpg" alt="image of items on a table, including a laptop, notebook, pens, and a coffee" class="float-left" />
